--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "scripts": {
-    "demo": "ts-node hello.ts"
+    "demo": "pm2 start hello.ts",
+    "postinstall": "./node_modules/.bin/pm2 install typescript"
   },
   "devDependencies": {
     "@types/node": "13.7.7",
+    "pm2": "5.1.2",
     "ts-node": "8.6.2",
     "typescript": "3.8.3"
   }
